--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,11 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hampter</h1>
+    <div>
+        <img src="img\menu.png" class="menu">
+        <img src="https://media.tenor.com/SXISTSa5N3oAAAAC/goofyahh-hamsters.gif" class="logo"> 
+        <h1>Hampter</h1>
+    </div>
     
 </body>
 </html>
