--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div id="top">
         <img src="img\menu.png" class="menu">
-        <img src="https://media.tenor.com/SXISTSa5N3oAAAAC/goofyahh-hamsters.gif" class="logo"> 
+        <img src="gif\log-1.gif" class="logo"> 
         <h1>Hampter</h1>
+        <img src="img\Search.png" class="search">
     </div>
     
 </body>
