--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 </head>
 <body>
     <div id="top">
+        <!-- barra -->
         <img src="img\menu.png" class="menu">
         <img src="gif\log-1.gif" class="logo"> 
         <h1>Hampter</h1>
         <img src="img\Search.png" class="search">
     </div>
-    
+    <div>
+        <!-- videos -->
+        <a href="tsukihime.html" class="asd"><img src="img/asfdas.jpg" class="vid-1"></a>
+        <a href="trigun.html" class="asd"><img src="img/trig.jpg" class="vid-1"></a>
+        <a href="parasyte.html" class="asd"><img src="img/parst.webp" class="vid-1"></a>
+        <a href="top 7.html" class="asd"><img src="img/maxresdefault.jpg" class="vid-1"></a>
+    </div>
 </body>
 </html>
