--- a/trigun.html
+++ b/trigun.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="trigun.css">
-    <title>Um pistoleiro chamado Vash [Trigun Stampede]</title>
+    <title>Um pistoleiro chamado Vash [Trigun Stampede] - MikaritosGA -</title>
 </head>
 <body>
     <div id="top">
@@ -15,6 +15,7 @@
         <h1>Hampter</h1>
         <img src="img\Search.png" class="search">
     </div>
-    <iframe width="802" height="455" src="https://www.youtube.com/embed/kX09GOMhE3E?si=DmYO_lpV_X0bZ-D0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="vid-1"></iframe> 
+    <iframe width="802" height="455" src="https://www.youtube.com/embed/kX09GOMhE3E?si=DmYO_lpV_X0bZ-D0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="vid-1"></iframe>
+    <h2 p>Um pistoleiro chamado Vash [Trigun Stampede]</p /h2> 
 </body>
 </html>
